--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ build-iPhoneSimulator/
 Gemfile.lock
 .ruby-version
 tmp
+.idea
 # .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
