--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,9 @@ yarn-debug.log*
 /pkg/
 /spec/reports/
 /spec/examples.txt
-/test/tmp/
-/test/version_tmp/
-/tmp/
+test/tmp/
+test/version_tmp/
+tmp/
 
 # Used by dotenv library to load environment variables.
 # .env
