--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,9 @@ yarn-debug.log*
 /pkg/
 /spec/reports/
 /spec/examples.txt
-test/tmp/
-test/version_tmp/
-tmp/
+/test/tmp/
+/test/version_tmp/
+/tmp/
 
 # Used by dotenv library to load environment variables.
 # .env
@@ -115,6 +115,7 @@ build-iPhoneSimulator/
 Gemfile.lock
 .ruby-version
 .idea
+test/
 # .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
