--- a/.gitignore
+++ b/.gitignore
@@ -114,8 +114,10 @@ build-iPhoneSimulator/
 # intended to run in multiple environments; otherwise, check them in:
 Gemfile.lock
 .ruby-version
-tmp
 .idea
+test/
+db/development.sqlite3
+log/
 # .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
